# navbuddy

./: .env.example  .gitignore  LICENSE  README.md  index.html  pyproject.toml
dashboard/: next.config.ts  package-lock.json  package.json
dashboard/src/app/: globals.css  layout.tsx
dashboard/src/app/samples/: page.tsx
dashboard/src/app/samples/[id]/: page.tsx
dashboard/src/components/: model-badge.tsx
dashboard/src/lib/: api.ts  models.ts  types.ts
data/: README.md  canonical_gt.jsonl  custom_labels.jsonl  eval.json  ground_truth.jsonl  gt_split_config.json  gt_split_samples.jsonl  models.json  navbuddy100_manifest.json
data/results/: claude_3_haiku.jsonl  claude_haiku_4_5.jsonl  claude_opus_4.jsonl  claude_opus_4_1.jsonl  claude_opus_4_5.jsonl  claude_opus_4_6.jsonl  claude_sonnet_4.jsonl  claude_sonnet_4_5.jsonl  claude_sonnet_4_6.jsonl  gemini_3_1_flash_lite.jsonl  gemini_3_1_pro.jsonl  gemini_3_flash.jsonl  gpt_4_1.jsonl  gpt_4_1_mini.jsonl  gpt_4_1_nano.jsonl  gpt_4o_mini.jsonl  gpt_5_1_codex_mini.jsonl  gpt_5_2_codex.jsonl  gpt_5_4.jsonl  gpt_5_4_mini.jsonl  gpt_5_4_nano.jsonl  grok_4_1_fast.jsonl  grok_4_20.jsonl  grok_4_fast.jsonl  qwen2_5_vl_3b.jsonl  qwen2_5_vl_72b.jsonl  qwen3_5_flash.jsonl  qwen3_vl_32b.jsonl  qwen3_vl_8b.jsonl
manifests/: navbuddy100.json
navbuddy/: __init__.py  augment.py  cli.py  frame_regenerator.py  generate.py  manifest.py  map_renderer_osm.py  osm_client.py  overlays.py  player.py  polylines.py  routing_client.py  sampling.py  streetview_client.py  utils.py
navbuddy/api/: main.py
navbuddy/eval/: __init__.py  augment_assignment.py  inference.py  matrix_runner.py  metric_eval.py  metrics_semantic.py  schemas.py
scripts/: regenerate_maps.py
